tests/NormalTests/paczka2/big_fuzzy/92332695.err
Error in line 2: VD3 A579 22,5
Error in line 5: 5qThd3 A995 30,7
Error in line 14: VD3 A81 53,8
Error in line 10: 5qThd3 A845 92,7
Error in line 30: 0mc AVV5 326,2
Error in line 41: 5qThd3 A845 13,1
Error in line 29: A81 A81 29,7
Error in line 54: uYsfwKzYk2 A579 82,7
Error in line 46: VD3 A845 84,1
Error in line 67: ptxfi A845 75,8
Error in line 76: ptxfi A81 115,9
Error in line 64: VD3 A995 0,2
Error in line 83: VD3 A579 0,7
Error in line 98: VD3 A845 61,9
Error in line 86: uYsfwKzYk2 A81 74,0
Error in line 101: VD3 A81 28,3
Error in line 104: ptxfi A81 36,0
Error in line 114: ptxfi A995 56,4
Error in line 113: 0mc A81 71,1
Error in line 108: uYsfwKzYk2 A995 97,8
Error in line 123: uYsfwKzYk2 A579 87,0
Error in line 131: uYsfwKzYk2 A845 50,8
Error in line 135: ptxfi A845 -1,3
Error in line 132: 6OiZLO1VNZ A845 43,8
Error in line 133: uYsfwKzYk2 A579 15,0
Error in line 130: 5qThd3 A845 91,5
Error in line 138: 5qThd3 A995 1,3
Error in line 137: uYsfwKzYk2 A845 51,3
Error in line 136: 6OiZLO1VNZ A995 31,6
Error in line 146: 6OiZLO1VNZ A579 78,8
Error in line 134: ptxfi A845 13,4
Error in line 151: 0mc A579 55,4
Error in line 172: 6OiZLO1VNZ A995 120,60
Error in line 168: 6OiZLO1VNZ A995 26,6
Error in line 158: 5qThd3 A579 323,2
Error in line 176: VD3 A81 16,7
Error in line 167: 0mc A845 99,7
Error in line 173: 6OiZLO1VNZ A81 56,8
Error in line 188: A8 A995 70,9
Error in line 174: 5qThd3 A995 60,1
Error in line 196: uYsfwKzYk2 A81 93,85
Error in line 190: uYsfwKzYk2 A995 83,5
Error in line 203: ptxfi A81 79,8
Error in line 208: A81 A845 27,0
Error in line 205: 0mc A81 50,7
Error in line 209: ptxfi A845 43,1
Error in line 219: VD3 A81 65,67
Error in line 215: 5qThd3 A579 24,9
Error in line 221: 5qThd3 A845 0,2
Error in line 226: A81 A579 11,5
Error in line 204: uYsfwKzYk2 A81 255,3
Error in line 232: uYsfwKzYk2 A845 32,3
Error in line 237: ptxfi A995 11,4
Error in line 243: Ãmc A995 26,8
Error in line 244: ptxfi A579 64,8
